--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 <div id="main" class="container">
-    <h2>所有问题</h2>
+    <h2>All Questions</h2>
 
     <div class="feeds">
       {%- for question in questions %}      
@@ -16,7 +16,7 @@
       {%- endfor %}
     </div>
     <p>
-      <a href="{{ url_for('new') }}" class="btn btn-primary">提问</a>
+      <a href="{{ url_for('question') }}" class="btn btn-primary">Add Question</a>
     </p>
 </div>
 {% endblock %}
