--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,18 @@
 {% extends "layout.html" %}
 {% block body %}
   <form action="" method=post class="form-horizontal">
-    <h2>登录问问</h2>
+    <h2>Login</h2>
     <div class="control-group">
         <div class="controls">
           <input type="text" id="username" name="username" class="input-xlarge"
-            placeholder="输入用户名" required>
+            placeholder="Input Username" required>
         </div>
     </div>
 
     <div class="control-group">
         <div class="controls">
           <input type="password" id="password" name="password" class="input-xlarge"
-            placeholder="输入密码" required>
+            placeholder="Input Password" required>
         </div>
     </div>
 
@@ -24,7 +24,7 @@
 
     <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn btn-success">登录</button>
+          <button type="submit" class="btn btn-success">Login</button>
         </div>
     </div>
   </form>
